# webserver

./: docker-compose.yml
.github/workflows/: docker-image.yml
frontend/: Dockerfile  package-lock.json
frontend/rust-front/: package-lock.json  package.json
frontend/rust-front/src/: App.tsx
ngix/: Dockerfile  rust.conf
opt/: Dockerfile
opt/practice-rust/: Cargo.toml
opt/practice-rust/src/: main.rs  parser.rs
