[package]
name = "practice-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
actix-rt="*"
serde = { version = "1.0.188", features = ["derive"] }
nom = "7.1.3"
strum = "0.25.0"
strum_macros = "0.25.2"
rust-crypto = "*"
md5 = "0.7.0"
sqlparser = { version = "*", features = ["visitor"] }
clap = { version = "4.4.6", features = ["derive"] }
serde_json = "1.0.107"
env_logger = { version = "0.10.0", features = [] }
log = "0.4.20"
